Fixed overflow.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     background: #000000;
+    overflow: hidden;
 }
 
 #bg {
